# psoc6-hal

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config
examples/: blinky.rs  clocky.rs  cpuss.rs  cpuss.rss  interrupts.rs  pac_scratch.rs  startup.rs  system.rs  timery.rs  watchdog.rs  watchdog_hal.rs
src/: clocks.rs  delay.rs  error.rs  gpio.rs  lib.rs  prelude.rs
src/drivers/: mod.rs  nvic.rs
src/drivers/backup/: mod.rs
src/drivers/cpuss/: cores.rs  interrupt.rs  mod.rs  nvic.rs  utility.rs
src/drivers/flashc/: mod.rs
src/drivers/ipc/: mod.rs  pipes.rs  semaphore.rs
src/drivers/prot/: mod.rs
src/drivers/system/: clocks.rs  info.rs  interrupts.rs  mod.rs  power_sam.rs  reset_cause.rs  watchdog.rs
src/psoc/: mod.rs  semaphores.rs  startup.rs  system_channels.rs
