[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>", "Dave Humphries <humphriesdj@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the psoc6 family of microcontrollers"
documentation = "https://docs.rs/psoc6-hal"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "psoc6-hal"
readme = "README.md"
repository = "C:/Users/Dave/Documents/fossils/psoc6_hal"
version = "0.1.1"

[package.metadata.docs.rs]
features = ["rt"]

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
bitflags = "2.0.0-rc.1"
vcell = "0.1.3"                 #for somethign better than raw ptr?
heapless = "0.7.16"

[dependencies.cast]
default-features = false
version = "0.2.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.psoc6-pac]
git = "https://github.com/diagonalDave/psoc6-pac"
#path = "C:/Users/Dave/Documents/github/psoc6-pac"


[dev-dependencies]
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"


[features]
default = ["rt"]
rt = ["psoc6-pac/rt"]


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "watchdog"
required-features = ["rt"]
